objects/Cases__mdt.object
<CustomObject>
    <fields>
        <fullName>Site_Page_Footer__c</fullName>
        <label>Site Page Footer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Page_Header__c</fullName>
        <label>Site Page Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sites_Page_Header_Subscript__c</fullName>
        <label>Sites Page Header Subscript</label>
        <type>TextArea</type>
    </fields>
    <label>Procurement Settings</label>
    <pluralLabel>Procurement Settings</pluralLabel>
</CustomObject>